# gl_playground

./: CMakeLists.txt  Readme.md
GLTools/include/: GLBatch.h  GLTools.h
GLTools/lib/: libgltools.dylib
glad/include/glad/: glad.h
glad/src/: glad.c
shader/: 2.3.1.metarials.frag  2.4.lighting_maps.frag  2.4.lighting_maps.vert  2.5.light_caster2.frag  2.5.light_casters.frag  2.5.spotlight.frag  2.6.multiple_lights.frag  3.3.model_loading.frag  3.3.model_loading.vert  4.1.depth_testing.frag  4.2.stencil_testing.frag  4.3.blending.frag  4.5.framebuffers.frag  4.6.skybox.frag  4.6.skybox.vert  basic_light.frag  basic_light.vert  basic_lighting_e2.frag  basic_lighting_e2.vert  basic_lighting_e3.frag  basic_lighting_e3.vert  projection.vert  shader.fs  shader.vert  shader.vs  texture.frag  texture.vert  trans.vert
src/: 02_02_basic_lighting.cpp  02_03_lighting_materials.cpp  02_04_lighting_maps.cpp  02_05_light_casters.cpp  02_06_multiple_lights.cpp  03_03_model_loading.cpp  04_01_depth_testing.cpp  04_02_stencil_testing.cpp  04_03_blending.cpp  04_04_face_culling.cpp  04_05_framebuffers.cpp  04_06_cubemaps.cpp  camera.h  hello_camera.cpp  hello_camera_move.cpp  hello_coordinate.cpp  hello_glad.cpp  hello_glut.cpp  hello_lamp.cpp  hello_shader.cpp  hello_shader_class.cpp  hello_texture.cpp  hello_transformation.cpp  hello_triangle.cpp  mesh.h  model.h  shader_s.h  texture_s.h  triangle.cpp
